[package]
name = "lattice-crypto-rs"
version = "0.1.0"
edition = "2021"
description = "Lattice-based cryptography primitives: LWE encryption/decryption, Ring-LWE structures, Gaussian sampling, and lattice basis operations"
license = "MIT OR Apache-2.0"
keywords = ["lattice", "cryptography", "lwe", "ring-lwe", "post-quantum"]
categories = ["cryptography", "algorithms", "mathematics"]
repository = "https://github.com/SuperInstance/lattice-crypto-rs"
authors = ["SuperInstance"]
readme = "README.md"

[dependencies]
proptest = { version = "1.5", optional = true }

[dev-dependencies]
proptest = "1.5"
